[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/menu_section_9patch.png" type="Texture" id=2]
[ext_resource path="res://assets/yarn/test-script.yarn" type="Script" id=3]
[ext_resource path="res://ui/MainUI.gd" type="Script" id=4]
[ext_resource path="res://ui/DialogText.gd" type="Script" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://ui/OptionsList.gd" type="Script" id=7]
[ext_resource path="res://assets/new_theme.tres" type="Theme" id=8]
[ext_resource path="res://ui/DialogOption.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/1Bit_UI_pack_byBatuhan/border1_2x.tres" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 74
outline_size = 5
outline_color = Color( 1, 0.992157, 0.513726, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="DialogBox" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="TopBox" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -300.0
margin_top = 20.0
margin_right = 300.0
margin_bottom = 170.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" type="NinePatchRect" parent="TopBox"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogText" type="RichTextLabel" parent="TopBox/DialogBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Blah blah blah"
text = "Blah blah blah"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
options_icon_path = NodePath("../IconHolder/OptionsIcon")
continue_icon_path = NodePath("../IconHolder/ContinueIcon")

[node name="IconHolder" type="Control" parent="TopBox/DialogBox"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -70.0
margin_top = -70.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsIcon" type="TextureRect" parent="TopBox/DialogBox/IconHolder"]
modulate = Color( 1, 0.772549, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueIcon" type="TextureRect" parent="TopBox/DialogBox/IconHolder"]
modulate = Color( 1, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="BottomBox" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -165.0
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="BottomBox"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsList" type="NinePatchRect" parent="BottomBox/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 305.0
margin_top = 10.0
margin_right = -22.0
margin_bottom = -10.0
theme = SubResource( 7 )
texture = ExtResource( 2 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
button_paths = [ NodePath("DialogOption1"), NodePath("DialogOption2"), NodePath("DialogOption3") ]

[node name="DialogOption1" parent="BottomBox/NinePatchRect/OptionsList" instance=ExtResource( 9 )]

[node name="DialogOption2" parent="BottomBox/NinePatchRect/OptionsList" instance=ExtResource( 9 )]
margin_top = 50.0
margin_bottom = 85.0

[node name="DialogOption3" parent="BottomBox/NinePatchRect/OptionsList" instance=ExtResource( 9 )]
margin_top = 90.0
margin_bottom = 125.0

[node name="TimerBox" type="NinePatchRect" parent="BottomBox/NinePatchRect"]
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = 296.0
margin_bottom = -15.0
texture = ExtResource( 2 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="TimerLabel" type="Label" parent="BottomBox/NinePatchRect/TimerBox"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.568627, 0, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "20:00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogCharTimer" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="YarnStory" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="line_complete" from="TopBox/DialogBox/DialogText" to="." method="_on_DialogText_Label_line_complete"]
[connection signal="timeout" from="DialogCharTimer" to="TopBox/DialogBox/DialogText" method="_on_Timer_timeout"]
[connection signal="command" from="YarnStory" to="." method="_on_YarnStory_command"]
[connection signal="dialogue" from="YarnStory" to="." method="_on_YarnStory_dialogue"]
[connection signal="options" from="YarnStory" to="." method="_on_YarnStory_options"]
